--- a/css/styles.css
+++ b/css/styles.css
@@ -11,16 +11,17 @@ body {
     max-width: 1920px;
     width: 100%;
     height: 1080px;
+    background-color: #FAFAFA;
 
 }
 
 header {
     display: flex;
+    flex-direction: column;
     width: 1140px;
     padding: 12px 80px;
     justify-content: center;
     align-items: center;
-   
 }
 
 #navigation {
@@ -67,4 +68,92 @@ header {
     border-radius: 8px;
     border: 1px solid #AC00FF;
     background: #E9D7FE;
+}
+
+#hedaer-title {
+    display: flex;
+    width: 800px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+   margin-top: 20px;
+   margin-left: 9%;
+}
+
+#hedaer-title #heading {
+    width: 720px;
+    color: #323232;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 74px;
+}
+
+#text {
+    align-self: stretch;
+    color: #323232;
+    font-family: "Inria Sans";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px
+}
+
+#buttons {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+#join-btn {
+    display: flex;
+    width: 204px;
+    padding: 16px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: none;
+    border-radius: 8px;
+    background-color: #5C3BAE;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+}
+
+#video-btn {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    background: none;
+    border: none;
+}
+
+#video-btn a {
+    color: #4D3491;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: none;
+    text-decoration-thickness: auto;
+    text-underline-offset: auto;
+    text-underline-position: from-font;
+}
+
+#content {
+    width: 1300px;
+    display: inline-flex;
+    padding: 0px 0px 45px 27px;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: -5%;
+    margin-left: 10%;
 }
